# embedded-bridge

./: CHANGELOG.md  README.md  library.json  pyproject.toml
cpp/: CMakeLists.txt  test.sh
cpp/include/embedded_bridge/: message.h  writer.h
cpp/include/embedded_bridge/detail/: crc16.h
cpp/include/embedded_bridge/framing/: cobs.h  hdlc.h  slip.h
cpp/test/: CMakeLists.txt  test_cobs.cpp  test_crc16.cpp  test_hdlc.cpp  test_message.cpp  test_multi_include.cpp  test_slip.cpp  test_wire.cpp
docs/: design.md
python/: pyproject.toml  test.sh
python/src/embedded_bridge/framing/: __init__.py  base.py  hdlc.py  line.py  message.py
python/src/embedded_bridge/receivers/: base.py  event_capture.py  memory_tracker.py  sleep_wake.py
python/src/embedded_bridge/testing/: __init__.py  protocol.py  session.py
python/src/embedded_bridge/transport/: __init__.py  websocket.py
python/tests/: test_crash_detector.py  test_event_capture.py  test_line_framer.py  test_memory_tracker.py  test_message.py  test_serial_transport.py  test_slip.py  test_test_session.py  test_websocket_transport.py  test_wire.py
python/tests/integration/: test_websocket_transport_integration.py
src/embedded_bridge/: __init__.py
src/embedded_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/embedded_bridge/framing/: __init__.py  cobs.py  crc16.py  slip.py
src/embedded_bridge/receivers/: __init__.py  crash_detector.py  event_capture.py  memory_tracker.py  router.py
src/embedded_bridge/testing/: __init__.py  protocol.py  session.py  types.py
src/embedded_bridge/transport/: __init__.py  base.py  serial.py
tests/: test_cobs.py  test_crc16.py  test_event_capture.py  test_hdlc.py  test_memory_tracker.py  test_router.py  test_sleep_wake.py  test_test_session.py
wire-tests/: cobs.json  crc16.json  hdlc.json  message.json  slip.json
